# moped_tracker

./: CMakeLists.txt  CMakeLists.txt~  moped.cpp  moped.cpp~  moped_test.cpp  package.xml
libmoped/: Makefile
libmoped/include/: moped.hpp
libmoped/libs/SiftGPU/: SiftGPU.cpp
